src/test/ui/generic-associated-types/issue-81712-cyclic-traits.stderr
error[E0107]: missing generics for associated type `C::DType`
  --> $DIR/issue-81712-cyclic-traits.rs:14:19
   |
LL |     type CType: C<DType = Self>;
   |                   ^^^^^ expected 1 generic argument
   |
note: associated type defined here, with 1 generic parameter: `T`
  --> $DIR/issue-81712-cyclic-traits.rs:11:10
   |
LL |     type DType<T>: D<T, CType = Self>;
   |          ^^^^^ -
help: add missing generic argument
   |
LL |     type CType: C<DType<T> = Self>;
   |                   ~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
